# corelock

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic_usage.c  dummy_rt.c  utils.c  utils.h
lib/: CMakeLists.txt
lib/include/: corelock.h
lib/src/: corelock.c
